public/analytics-pro/v0.13/_sources/reference/tmlt/analytics/tuner/_tuner/index.rst.txt
:orphan:


..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024


*************
_tuner
*************

.. py:module:: tmlt.analytics.tuner._tuner

.. autoapi-nested-parse::

   Interface for tuning :class:`~.SessionProgram`\ s.

   .. |Tunable| replace:: :class:`~.Tunable`











Functions
=========

.. list-table::

   * - :func:`.baseline`
     - Decorator to define a custom baseline method for :class:`~.SessionProgramTuner`.
   * - :func:`.metric`
     - Decorator to define a custom metric method for :class:`~.SessionProgram`.
   * - :func:`.view`
     - Views of the output table to be used across metrics in place of program outputs.

.. py:function:: baseline(name)

   Decorator to define a custom baseline method for :class:`~.SessionProgramTuner`.

   To use the "default" baseline in addition to this custom baseline,
   you need to separately specify `"default": NoPrivacySession.Options()`
   in ``baseline_options`` class variable.

   :param name: A name for the custom baseline.

   ..

       >>> from tmlt.analytics.session import Session

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         ...
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @baseline("custom_baseline")
   ...     def custom_baseline(
   ...         protected_inputs: Dict[str, DataFrame],
   ...     ) -> Dict[str, DataFrame]:
   ...         ...
   ...     @baseline("another_custom_baseline")
   ...     def another_custom_baseline(
   ...         self,
   ...         protected_inputs: Dict[str, DataFrame],
   ...         unprotected_inputs: Dict[str, DataFrame],
   ...     ) -> Dict[str, DataFrame]:
   ...         # If the program has unprotected inputs or parameters, the custom
   ...         # baseline method can take them as an argument.
   ...         ...
   ...     baseline_options = {
   ...         "default": NoPrivacySession.Options()
   ...     }  # This is required to keep the default baseline



.. py:function:: metric(name, output, join_columns, grouping_columns = None, description = None, baselines = None, indicator_column_name = None, join_how = 'inner')

   Decorator to define a custom metric method for :class:`~.SessionProgram`.

   The decorated metric must have the following parameters:
   grouped_output: A GroupedData produced by joining the DP and baseline output
   on the specified columns, and grouping by the specified columns.
   output_column_name: If the metric returns a table, the value of the metric should
   be in a column with this name.

   The following parameters are allowed:
   self: A reference to the CustomGroupedMetric class created for this metric.
   grouping_columns: The columns the output is grouped by.
   unprotected_inputs: The program's unprotected inputs. Not allowed if the program
   has none.
   program_parameters: The program's parameters. Not allowed if the program has none.

   Alternatively, you can use :class:`~.metrics.CustomGroupedMetric` directly.

   To use the built-in metrics in addition to this custom metric,
   you can separately specify ``metrics`` class variable.

   :param name: A name for the metric.
   :param description: A description of the metric.
   :param output: The output to compute the metric for.
   :param join_columns: The list of output columns to use to join the dp and baseline
                        output.
   :param grouping_columns: If specified, calculate the metric per group when the data
                            is grouped by these columns.
   :param baselines: The name of the baseline program(s) used for the error report.
                     If None, use all baselines specified as custom baseline and
                     baseline options on tuner class. If no baselines are specified on tuner
                     class, use default baseline. If a string, use only that baseline.
                     If a list, use only those baselines.
   :param indicator_column_name: If specified, we will add a column with the
                                 specified name to the joined data that contains either "dp",
                                 "baseline", or "both" to indicate where the values in the row came
                                 from.
   :param join_how: The type of join to perform. Should be one of "left", "right",
                    "inner" or "outer".

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import AbsoluteError
       >>> from pyspark.sql import GroupedData

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         return {"output_df": dp_output}
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @metric(name="custom_metric",
   ...         output="output_df",
   ...         join_columns=["join_column"]
   ...     )
   ...     def custom_metric(
   ...         grouped_output: GroupedData, output_column_name: str
   ...     ):
   ...         # If the program has unprotected inputs and/or parameters, the custom
   ...         #  metric method can take them as an argument.
   ...         ...
   ...     metrics = [
   ...         AbsoluteError(output="output_df", column="Y"),
   ...     ]  # You can mix custom and built-in metrics.



.. py:function:: view(name)

   Views of the output table to be used across metrics in place of program outputs.

   :param name: A name for the output view.

   ..

       >>> from tmlt.analytics.session import Session
       >>> from tmlt.analytics.metrics import RelativeError

   >>> class Program(SessionProgram):
   ...     class ProtectedInputs:
   ...         protected_df: DataFrame
   ...     class UnprotectedInputs:
   ...         unprotected_df: DataFrame
   ...     class Outputs:
   ...         output_df: DataFrame
   ...     def session_interaction(self, session: Session):
   ...         ...
   >>> class Tuner(SessionProgramTuner, program=Program):
   ...     @view("output_view")
   ...     def custom_view1(
   ...         outputs: Dict[str, DataFrame],
   ...     ) -> DataFrame:
   ...         ...
   ...     @view("another_output_view")
   ...     def custom_view2(
   ...         self,
   ...         outputs: Dict[str, DataFrame],
   ...         unprotected_inputs: Dict[str, DataFrame],
   ...     ) -> DataFrame:
   ...         # If the program has unprotected inputs or parameters, the view method
   ...         # can take them as an argument.
   ...         ...
   ...     metrics = [
   ...         RelativeError("output_view", column="a_sum"),
   ...     ] # The view can be used instead of output when metric is defined




Classes
=======

.. list-table::

   * - :class:`.Tunable`
     - Named placeholder for a single input to a :class:`~.SessionProgramTuner.Builder`.
   * - :class:`.TunablePrivateDataFrame`
     - A private dataframe and its protected change.
   * - :class:`.TunableDataFrameMixin`
     - Add tunable private and public dataframe support to a builder.
   * - :class:`.TunablePrivacyBudgetMixin`
     - Add support for tunable privacy budgets to a builder.
   * - :class:`.SessionProgramTuner`
     - Base class for defining an object to tune inputs to a :class:`~.SessionProgram`.

   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: Tunable

   Named placeholder for a single input to a :class:`~.SessionProgramTuner.Builder`.

   .. note::

       |PRO_NOTE|

   When a |Tunable| is passed to a :class:`~.SessionProgramTuner.Builder`, it
   is replaced with the concrete values for the tunable parameter when building
   :class:`~.SessionProgram` s inside of methods like
   :meth:`~.tuner.SessionProgramTuner.error_report` and
   :meth:`~.tuner.SessionProgramTuner.multi_error_report`.





   .. py:attribute:: name
      :annotation: :str

      Name of the tunable parameter.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: TunablePrivateDataFrame

   Bases: :class:`NamedTuple`

   A private dataframe and its protected change.

   One or both of the dataframe and protected_change can be a |Tunable|.







   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: TunableDataFrameMixin



   Add tunable private and public dataframe support to a builder.






   .. automethod:: __init__
   .. py:method:: with_private_dataframe(source_id, dataframe, protected_change)

      Add a tunable private dataframe to the builder.


   .. py:method:: with_public_dataframe(source_id, dataframe)

      Add a tunable public dataframe to the builder.


   .. py:method:: with_id_space(id_space)

      Adds an identifier space.

      This defines a space of identifiers that map 1-to-1 to the identifiers
      being protected by a table with the :class:`~.AddRowsWithID` protected
      change. Any table with such a protected change must be a member of some
      identifier space.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: TunablePrivacyBudgetMixin



   Add support for tunable privacy budgets to a builder.






   .. automethod:: __init__
   .. py:method:: with_privacy_budget(privacy_budget)

      Set the privacy budget for the object being built.



   
..
    SPDX-License-Identifier: CC-BY-SA-4.0
    Copyright Tumult Labs 2024
.. py:class:: SessionProgramTuner(builder)

   Base class for defining an object to tune inputs to a :class:`~.SessionProgram`.

   .. note::

       |PRO_NOTE|


   SessionProgramTuners should not be directly constructed. Instead, users should
   create a subclass of :class:`SessionProgramTuner`, then construct their
   :class:`SessionProgramTuner` using the auto-generated :attr:`Builder` attribute of
   the subclass.




   
   ..
       SPDX-License-Identifier: CC-BY-SA-4.0
       Copyright Tumult Labs 2024
   .. py:class:: Builder



      The builder for a specific subclass of SessionProgramTuner.






      .. automethod:: __init__
      .. py:method:: with_private_dataframe(source_id, dataframe, protected_change)

         Add a tunable private dataframe to the builder.


      .. py:method:: with_public_dataframe(source_id, dataframe)

         Add a tunable public dataframe to the builder.


      .. py:method:: with_parameter(name, value)

         Set the value of a parameter.


      .. py:method:: build()

         Returns an instance of the matching ``SessionProgramTuner`` subtype.


      .. py:method:: with_id_space(id_space)

         Adds an identifier space.

         This defines a space of identifiers that map 1-to-1 to the identifiers
         being protected by a table with the :class:`~.AddRowsWithID` protected
         change. Any table with such a protected change must be a member of some
         identifier space.


      .. py:method:: with_privacy_budget(privacy_budget)

         Set the privacy budget for the object being built.




   .. py:attribute:: baseline_options
      :annotation: :Optional[Union[Dict[str, tmlt.analytics.no_privacy_session.NoPrivacySession.Options], tmlt.analytics.no_privacy_session.NoPrivacySession.Options]]

      Configuration for how baseline outputs are computed.

      By default, a SessionProgramTuner computes both the DP outputs and the baseline
      outputs for a SessionProgram to compute metrics. The baseline outputs are computed
      by calling the :meth:`~.session_interaction` method with a
      :class:`~.NoPrivacySession`. The ``baseline_options`` attribute allows you to
      override the default options for the :class:`~.NoPrivacySession` used to
      compute the baseline. You can also specify multiple configurations to compute
      the baselines with different options. When multiple baseline configurations are
      specified, the metrics are computed with respect to each of the baseline
      configurations (unless specified otherwise in the metric definitions).

      To override the default baseline options
      (see :class:`~.NoPrivacySession.Options`), you can set this to
      an :class:`~.NoPrivacySession.Options` object.

      If you want to specify multiple baseline configurations, you can set this to a
      dictionary mapping baseline names to :class:`~.NoPrivacySession.Options`.

   .. py:attribute:: metrics
      :annotation: :Optional[List[tmlt.analytics.metrics.Metric]]

      A list of metrics to compute in each ``error_report``.

   .. py:attribute:: program
      :annotation: :Type[tmlt.analytics.program.SessionProgram]

      A subclass of :class:`~.SessionProgram` to be tuned.


   .. automethod:: __init__
   .. py:method:: tunables()
      :property:

      Returns a list of tunable inputs associated with this tuner.


   .. py:method:: outputs(tunable_values = None)

      Computes all outputs for a single run.

      :param tunable_values: A dictionary mapping names of |Tunable|\ s
                             to concrete values to use for this run. Every |Tunable| used
                             in building this tuner must have a value in this dictionary. This
                             can be None only if no |Tunable|\ s were used.


   .. py:method:: error_report(tunable_values = None)

      Computes DP outputs, baseline outputs, and metrics for a single run.

      :param tunable_values: A dictionary mapping names of |Tunable|\ s to concrete
                             values to use for this error report. Every |Tunable| used in building
                             this tuner must have a value in this dictionary. This can be None only
                             if no |Tunable|\ s were used.


   .. py:method:: multi_error_report(tunable_values_list)

      Runs the ``error_report`` for each set of values for the |Tunable|\ s.







